# ai_engineering-M1_Project

./: .gitignore  Makefile  README.md  pyproject.toml
data/: bank_kb.py
logs/: SoporteCliente_2026-02-14T17:35.json  SoporteCliente_2026-02-14T17:44.json  SoporteCliente_2026-02-14T17:50.json  SoporteCliente_2026-02-15T10:37.json  SoporteCliente_2026-02-15T10:44.json  SoporteCliente_2026-02-15T10:51.json  SoporteCliente_2026-02-15T11:03.json  SoporteCliente_2026-02-15T11:06.json  SoporteCliente_2026-02-15T11:09.json  SoporteCliente_2026-02-15T11:10.json  SoporteCliente_2026-02-15T11:14.json  SoporteCliente_2026-02-15T11:19.json  SoporteCliente_2026-02-15T11:22.json  SoporteCliente_2026-02-15T11:25.json  SoporteCliente_2026-02-15T11:28.json  SoporteCliente_2026-02-15T11:31.json  SoporteCliente_2026-02-15T11:36.json  SoporteCliente_2026-02-15T18:54.json  SoporteCliente_2026-02-15T19:01.json  SoporteCliente_2026-02-15T19:08.json  SoporteCliente_2026-02-15T19:11.json  SoporteCliente_2026-02-15T19:13.json  SoporteCliente_2026-02-15T19:14.json  SoporteCliente_2026-02-15T19:16.json  SoporteCliente_2026-02-15T21:19.json  SoporteCliente_2026-02-15T21:22.json  SoporteCliente_2026-02-15T21:23.json  SoporteCliente_2026-02-16T14:53.json  SoporteCliente_2026-02-16T15:07.json  SoporteCliente_2026-02-16T15:28.json  SoporteCliente_2026-02-16T16:29.json  SoporteCliente_2026-02-16T16:30.json  SoporteCliente_2026-02-16T16:34.json  SoporteCliente_2026-02-16T16:35.json  SoporteCliente_2026-02-16T17:02.json  SoporteCliente_2026-02-16T17:07.json
reports/: report1.md
tests/: test_run_query.py
(+5 files in other folders)
